--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,9 +3,7 @@
     package="com.handlerexploit.news"
     android:versionCode="1"
     android:versionName="1.0" >
-
     <uses-sdk android:minSdkVersion="4" />
-
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -19,5 +17,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
