--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,13 +6,13 @@
     <uses-sdk android:minSdkVersion="4" />
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/Global">
         <activity
             android:label="@string/app_name"
             android:name=".MainActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
