--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,20 +3,28 @@
     package="com.handlerexploit.news"
     android:versionCode="2"
     android:versionName="1.0.1" >
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="11"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="10" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
+        android:name=".Application"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Global">
+        android:theme="@style/Global" >
         <activity
-            android:label="@string/app_name"
-            android:name=".MainActivity">
-            <intent-filter >
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
